--- a/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4/MasterPage.Master
+++ b/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4/MasterPage.Master
@@ -78,7 +78,13 @@
             <%-- footer here --%>
             <br />
             <hr />
-            [© Copyright blablabla - 2017]
+            [© Copyright William Salim  1901468294 - 2017]
+            <br />
+            [© Copyright Albert Miliano 1901459711 - 2017]
+            <br />
+            [© Copyright Glenn Vincen   1901459604 - 2017]
+            <br />
+            [© Copyright Haris Weitani  1901459693 - 2017]
         </footer>
     </form>
 </body>
